--- a/BaseRateApp.WebApi/BaseRateApp/BaseRateApp.WebApi.csproj
+++ b/BaseRateApp.WebApi/BaseRateApp/BaseRateApp.WebApi.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
@@ -14,11 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Models\BaseRateApp.Models.csproj" />
+    <ProjectReference Include="..\Services\BaseRateApp.Services.csproj" />
   </ItemGroup>
 
 
