--- a/BaseRateApp.WebApi/BaseRateApp/BaseRateApp.WebApi.csproj
+++ b/BaseRateApp.WebApi/BaseRateApp/BaseRateApp.WebApi.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
@@ -15,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BaseRateApp.Persistance\BaseRateApp.Persistance.csproj" />
     <ProjectReference Include="..\Models\BaseRateApp.Models.csproj" />
     <ProjectReference Include="..\Services\BaseRateApp.Services.csproj" />
   </ItemGroup>
