--- a/BaseRateApp.WebApi/BaseRateApp/appsettings.json
+++ b/BaseRateApp.WebApi/BaseRateApp/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;initial catalog=BaseRateApp;Trusted_Connection=true;MultipleActiveResultSets=true"
 }
