--- a/BaseRateApp.WebApi/Services/BaseRateApp.Services.csproj
+++ b/BaseRateApp.WebApi/Services/BaseRateApp.Services.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BaseRateApp.Persistance\BaseRateApp.Persistance.csproj" />
     <ProjectReference Include="..\Models\BaseRateApp.Models.csproj" />
   </ItemGroup>
 
