--- a/BaseRateApp.WebApi/Services/BaseRateApp.Services.csproj
+++ b/BaseRateApp.WebApi/Services/BaseRateApp.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
